tests/typing/good/testfile-underscore-3.go
package main

type T struct { _ int }
func main() {}
