tests/typing/bad/testfile-underscore-1.go
package main
func f(_ int) int { return _ }
func main() {}
